--- a/index.html
+++ b/index.html
@@ -452,8 +452,30 @@
                         <img class="icon" src="">
                     </div>
                     <div class="range">
-                        <input class="bar" type="range" min="0" max="10" value="0" class="form-range"
+                        <input class="bar" type="range" min="0" max="15" value="0" class="form-range"
                             id="face-outline-slider" />
+                    </div>
+                </div>
+
+                Grid X Spacing
+                <div class="slider one-row">
+                    <div class="container slider-label">
+                        <img class="icon" src="">
+                    </div>
+                    <div class="range">
+                        <input class="bar" type="range" min="25" max="100" value="50" class="form-range"
+                            id="background-grid-spacing-x-slider" />
+                    </div>
+                </div>
+
+                Grid Y Spacing
+                <div class="slider one-row">
+                    <div class="container slider-label">
+                        <img class="icon" src="">
+                    </div>
+                    <div class="range">
+                        <input class="bar" type="range" min="25" max="100" value="25" class="form-range"
+                            id="background-grid-spacing-y-slider" />
                     </div>
                 </div>
             </div>
