--- a/index.html
+++ b/index.html
@@ -447,6 +447,9 @@
                 <!-- Pills content -->
             </div>
             <div class="tab-pane fade" id="ex1-tabs-4" role="tabpanel" aria-labelledby="ex1-tab-4">
+                
+                <br><br><br>
+                Line Thickness
                 <div class="slider one-row">
                     <div class="container slider-label">
                         <img class="icon" src="">
